--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-Hello World
+
+<!DOCTYPE html>
+<html lang="en">
+<head>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Hello World</title>
+
+</head>
+<body>
+	Hello World
+	</div>
+</body>
+</html>
