--- a/LuckAbacus.html
+++ b/LuckAbacus.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<title>Privacy Policy for [Skewered Fruit]</title>
+	<title>Privacy Policy for [Luck Abacus]</title>
 	<style>
 		html {}
 		body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,code,form,fieldset,legend,input,textarea,p,blockquote,table,th,td,hr,button,article,aside,details,figcaption,figure,footer,header,hgroup,menu,nav,section,img {
@@ -31,7 +31,7 @@
 </head>
 <body>
 	<div class="main">
-		<p class="title">Privacy Policy for [Skewered Fruit]</p>
+		<p class="title">Privacy Policy for [Luck Abacus]</p>
 
 	</div>
 	<div class="main1">
